עכשיו כשיש אחסון מה הצעדים כדי לפרסם את האתר שאצפה איך הוא נראה בדפדפן

--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -5,3 +5,8 @@ runConfig:
   # Increase this value if you'd like to automatically spin up
   # more instances in response to increased traffic.
   maxInstances: 1
+# Required for Supabase integration. You will be prompted to set these
+# secrets when you deploy.
+secrets:
+  - name: NEXT_PUBLIC_SUPABASE_URL
+  - name: NEXT_PUBLIC_SUPABASE_ANON_KEY
