--- a/src/package.json
+++ b/src/package.json
@@ -1,9 +1,10 @@
+
 {
   "name": "nextn",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p 9002",
+    "dev": "next dev -p 9002",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -40,7 +41,7 @@
     "embla-carousel-react": "^8.1.7",
     "firebase": "^10.12.4",
     "lucide-react": "^0.414.0",
-    "next": "14.2.5",
+    "next": "^14.2.5",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
